--- a/market-ajh/templates/base.html.twig
+++ b/market-ajh/templates/base.html.twig
@@ -49,7 +49,11 @@
                                 <a href="{{ path('app_guild') }}" class="block px-4 py-2 text-WHITE hover:bg-PINK rounded-lg transition-colors duration-300">Gestion Guildes</a>
                             </li>
                         {% endif %}
-                        
+                        {% if is_granted('ROLE_COMPTABLE') %}
+                            <li>
+                                <a href="{{ path('app_compta') }}" class="block px-4 py-2 text-WHITE hover:bg-PINK rounded-lg transition-colors duration-300">Comptabilité</a>
+                            </li>
+                        {% endif %}
                         {% if app.user is not null and app.user.guild is not null and app.user.guild.chef %}
                             <li>
                                 <a href="{{ path('app_guild_items_index') }}" class="block px-4 py-2 text-WHITE hover:bg-PINK rounded-lg transition-colors duration-300">Items de guilde</a>
