--- a/market-ajh/templates/compta/index.html.twig
+++ b/market-ajh/templates/compta/index.html.twig
@@ -1,13 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ComptaController!{% endblock %}
+{% block title %}Compabilité{% endblock %}
 
 {% block body %}
 <div class="container mx-auto px-4 py-8">
-    {% if is_granted('ROLE_COMPTABLE') %}
-        <h2 class="text-2xl font-bold text-center mb-6 text-WHITE">Section réservée aux comptables</h2>
-    {% endif %}
-    <hr class="my-8 border-t-4 border-gray-300">
     {% if is_granted('ROLE_ADMIN') %}
         <h2 class="text-2xl font-bold text-center mb-6 text-WHITE">Section réservée aux administrateurs</h2>
         <div class="flex justify-center mb-8">
