/news n'est accessibles que pour les admin et les compatbles, les retourns à la ligne sont correctement pris en copte sur /home

--- a/market-ajh/templates/home/index.html.twig
+++ b/market-ajh/templates/home/index.html.twig
@@ -15,7 +15,7 @@
                     
                 </div>
                 <div class="text-gray-800">
-                    {{ news.content }}
+                    {{ news.content|nl2br }}
                 </div>
             </div>
         {% else %}
