correction d'un bug sur le titre des pages

--- a/market-ajh/templates/base.html.twig
+++ b/market-ajh/templates/base.html.twig
@@ -25,7 +25,7 @@
 
             <!-- Titre centré -->
             <div class="absolute left-1/2 transform -translate-x-1/2">
-            <a href="{{ path('app_home') }}" class="text-WHITE text-2xl font-bold">{{ nomdepage }}</a>
+                <span class="text-WHITE text-2xl font-bold">{{ nomdepage }}</span>
             </div>
 
             <!-- Boutons à droite -->
