--- a/market-ajh/templates/home/index.html.twig
+++ b/market-ajh/templates/home/index.html.twig
@@ -21,8 +21,10 @@
                     <span class="font-bold text-lg text-WHITE">
                         {{ news.titre ? news.titre : 'Sans titre' }}
                     </span>
-                    <span class="text-xs bg-blue-100 text-blue-700 px-2 py-1 rounded w-fit">
-                        {{ news.Emetteur ? news.Emetteur.username : 'Anonyme' }}
+                    <span class="text-xs 
+                        {{ news.Emetteur.getBestRole() == 'Administrateur' ? 'bg-red-500 text-WHITE' : (news.Emetteur.getBestRole() == 'Comptable' ? 'bg-blue-100 text-WHITE' : 'bg-gray-100 text-WHITE') }} 
+                        px-2 py-1 rounded w-fit">
+                        {{ news.Emetteur ? news.Emetteur.username ~ ': ' ~ news.Emetteur.getBestRole() : 'Anonyme' }}
                     </span>
                     <span class="text-sm text-gray-400">
                         {{ news.dateCreation ? news.dateCreation|date('d/m/Y H:i') : '' }}
