--- a/market-ajh/templates/base.html.twig
+++ b/market-ajh/templates/base.html.twig
@@ -14,7 +14,7 @@
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
     </head>
-    <body class="bg-GRAY flex flex-col min-h-screen" style="background-image: url('{{ asset('images/wallpapers/'~ wallpaper) }}'); background-size: cover; background-repeat: no-repeat; background-position: center;">
+    <body class="bg-GRAY flex flex-col min-h-screen" style="background-image: url('{{ asset('images/wallpapers/'~ wallpaper) }}'); background-size: cover; background-repeat: no-repeat; background-position: center; background-attachment: fixed;">
     <!-- Navigation -->
     <nav class="bg-BLACK shadow-md p-4">
         <div class="container mx-auto px-4 flex items-center justify-between relative">
