--- a/market-ajh/templates/security/login.html.twig
+++ b/market-ajh/templates/security/login.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Connexion{% endblock %}
 
 {% block body %}
-<div class="flex-col flex justify-center items-center min-h-screen bg-GRAY">
+<div class="flex-col flex justify-center items-center min-h-screen ">
     <div class="w-full max-w-md p-8 bg-GREEN text-WHITE rounded-lg shadow-lg">
         <h1 class="text-3xl font-bold mb-6 text-center">Connexion</h1>
 
