--- a/market-ajh/templates/news/index.html.twig
+++ b/market-ajh/templates/news/index.html.twig
@@ -8,17 +8,18 @@
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
 
-<form action="{{ path('app_news_create') }}" method="post">
-    <div>
-        <label for="titre">Titre :</label>
-        <input type="text" id="titre" name="titre">
-    </div>
-    <div>
-        <label for="contenu">Contenu :</label>
-        <textarea id="contenu" name="contenu" rows="4" cols="50"></textarea>
-    </div>
-    
-    
-    <button type="submit">Créer</button>
-</form>
+<div class="flex justify-center items-center min-h-screen">
+    <form action="{{ path('app_news_create') }}" method="post" class="bg-GREEN p-8 rounded-lg shadow-lg w-[45%]">
+        <div class="mb-4">
+            <label for="titre" class="block text-black font-medium mb-2">Titre :</label>
+            <input type="text" id="titre" name="titre" class="w-full px-3 py-2 border border-gray-300 rounded-md text-black">
+        </div>
+        <div class="mb-4">
+            <label for="contenu" class="block text-black font-medium mb-2">Contenu :</label>
+            <textarea id="contenu" name="contenu" rows="10" class="w-full px-3 py-2 border border-gray-300 rounded-md text-black"></textarea>
+        </div>
+        
+        <button type="submit" class="w-full bg-VIOLET text-white py-2 px-4 rounded-md hover:bg-blue-600 transition duration-200">Créer</button>
+    </form>
+</div>
 {% endblock %}
